<resources>
    <string name="app_name">Raumsuche</string>
    <string name="title_activity_group">Meine Gruppen</string>
    <string name="nextAvailableRoom">Nächster freier Raum</string>
    <string name="login">Anmelden</string>
    <string name="studentId">Matrikelnummer</string>
    <string name="name">Name</string>
    <string name="faculty">Fakultät</string>
    <string name="password">Passwort</string>
    <string name="signUp">Registrieren</string>
    <string name="OK">OK</string>
    <string name="signUpConfirmationMessage">Das Passwort wurde an deine Hochschul E-Mail Adresse gesendet.</string>
    <string name="signUpConfirmationMessageTitle">Bestätigung</string>
    <string name="pool">Pool</string>
    <string name="computer">Computer</string>
    <string name="beamer">Beamer</string>
    <string name="video">Video</string>
    <string name="looseSeating">Lose Bestuhlung</string>
    <string name="Cancel">Cancel</string>

    <string name="anyBuilding">Gebäude beliebig</string>
    <string name="anyRoomSize">Raumgröße beliebig</string>
    <string name="anyTime">Zeitstunde beliebig</string>
    <string name="title_activity_result">Freie Räume</string>

    <string-array name="buildings">
        <item>Hochhaus</item>
        <item>Gebäude A</item>
        <item>Gebäude B</item>
        <item>Gebäude G</item>
        <item>Gebäude L</item>
        <item>Gebäude S</item>
    </string-array>
    <string-array name="roomSizes">
        <item>&lt; 30 Plätze</item>
        <item>min. 30 Plätze</item>
        <item>min. 40 Plätze</item>
        <item>min. 50 Plätze</item>
        <item>min. 60 Plätze</item>
        <item>min. 70 Plätze</item>
        <item>min. 80 Plätze</item>
    </string-array>
    <string-array name="roomSizesNumbers">
        <item>1</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
        <item>70</item>
        <item>80</item>
    </string-array>
    <string-array name="times">
        <item>1. Block</item>
        <item>2. Block</item>
        <item>3. Block</item>
        <item>4. Block</item>
        <item>5. Block</item>
        <item>6. Block</item>
    </string-array>
    <string-array name="facultys">
        <item>Biotechnologie</item>
        <item>Elektrotechnik</item>
        <item>Informationstechnik</item>
        <item>Gestaltung</item>
        <item>Informatik</item>
        <item>Maschinenbau</item>
        <item>Sozialwesen</item>
        <item>Verfahrens- und Chemietechnik</item>
        <item>Wirtschaftsingenieurwesen</item>
        <item>Fakultätsübergreifend</item>
    </string-array>

    <string name="title_activity_login">Anmelden</string>
    <string name="title_activity_signup">Registrieren</string>
    <string name="title_activity_search">Freie Räume suchen</string>
    <string name="unknown_error">Ups, da ist wohl etwas schief gelaufen. Unser Fehler! Versuch es doch später noch einmal</string>
    <string name="signup_validation_error">Bitte geb deine Matrikelnummer, Namen und deine Fakultät an</string>
    <string name="login_validation_error">Bitte geb deine Matrikelnummer und Passwort an. Dein Passwort wurde an die Hochschul E-Mail Adresse gesendet.</string>
    <string name="change">Ändern</string>
    <string name="title_activity_profile">Mein Profil</string>
    <string name="profile_changed">Profil geändert</string>
    <string name="profile_validation_error">Bitte gebe deinen Namen und Fakultät an.</string>
    <string name="group_list_empty">Erstelle deine erste Gruppe</string>
    <string name="you">Du</string>
    <string name="group_name">Gruppenname</string>
    <string name="group_add_user">Matrikelnummer</string>
    <string name="add">Hinzufügen</string>
    <string name="group_add_user_already_added">Matrikelnummer ist bereits in der Gruppe</string>
    <string name="save">Speichern</string>
    <string name="search">Suchen</string>
    <string name="group_add_validation_error">Bitte gebe einen Gruppennamen ein</string>
    <string name="group_exit">Gruppe verlassen</string>
    <string name="group_form_edit_title">%1$s bearbeiten</string>
    <string name="group_form_add_title">Gruppe erstellen</string>
    <string name="group_form_exit">Möchtest du %1$s wirklich verlassen?</string>
    <string name="cancel">Abbrechen</string>
    <string name="group_admin">Gruppen-Admin</string>
    <string name="group_form_participants">Teilnehmer</string>
    <string name="no_search_results">Keine freien Räume gefunden :(</string>
    <string name="ok">Ok</string>
    <string name="today">Heute</string>
    <string name="room_notify_group">Gruppe benachrichtigen</string>
    <string name="result_meeting_created">Gruppentreffen versendet</string>
    <string name="send_notification">Benachrichtigen</string>
    <string name="create_meeting_hour_label">Treffen am %1$s zum</string>
    <string name="create_meeting_groups_label">Termin an Gruppe senden</string>
    <string name="account">Benutzeraccount</string>
    <string name="group_headline">Lerne in Gruppen</string>
    <string name="logout">Abmelden</string>
    <string name="profile">Mein Profil</string>
    <string name="my_groups">Meine Gruppen</string>
    <string name="all_meetings">Alle Treffen anzeigen</string>
    <string name="next_meeting">Nächstes Treffen</string>
    <string name="custom_search">Erweiterte Suche</string>
    <string name="show_room">Raum anzeigen</string>

</resources>
