<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.hs_mannheim.stud.raumsuche.SearchActivity">

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/textSearchDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Heute"
        android:textSize="20sp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_gravity="left" />
    <TextView
        android:id="@+id/textSearchTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Jede Zeitstunde"
        android:textSize="20sp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_gravity="right" />
</FrameLayout>

    <TextView
        android:id="@+id/textSearchBuilding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/anyBuilding"
        android:textSize="20sp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp" />

    <TextView
        android:id="@+id/textSearchRoomSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/anyRoomSize"
        android:textSize="20sp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp" />

    <Switch
        android:id="@+id/switchSearchPool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pool"
        android:checked="false"
        android:textSize="20sp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp" />

    <Switch
        android:id="@+id/switchSearchComputer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/computer"
        android:checked="false"
        android:textSize="20sp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp" />

    <Switch
        android:id="@+id/switchSearchBeamer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/beamer"
        android:checked="false"
        android:textSize="20sp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp" />

    <Switch
        android:id="@+id/switchSearchVideo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/video"
        android:checked="false"
        android:textSize="20sp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp" />

    <Switch
        android:id="@+id/switchSearchLooseSeating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/looseSeating"
        android:checked="false"
        android:textSize="20sp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp" />

    <Button
        android:id="@+id/buttonAddGroupToRoomSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addGroup" />

</LinearLayout>
