<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    >

    <android.support.design.widget.TextInputLayout
        android:id="@+id/group_add_name_inputlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/group_add_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/group_name"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/group_add_user_addbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/group_add_name_inputlayout"
        android:layout_alignParentRight="true"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:text="@string/add"

        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/group_add_user_inputlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/group_add_user_addbutton"
        android:layout_toLeftOf="@id/group_add_user_addbutton"
        >

        <EditText
            android:id="@+id/group_add_user_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/group_add_user"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <ListView
        android:id="@+id/group_add_user_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/group_add_user_inputlayout"
        android:layout_marginBottom="8dp"

        />

</RelativeLayout>