<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.hs_mannheim.stud.raumsuche.ProfileActivity">

    <ImageView
        android:id="@+id/profile_ci_image"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop"
        android:src="@drawable/profile_large" />

    <View
        android:layout_height="1px"
        android:layout_width="match_parent"
        android:layout_below="@id/profile_ci_image"
        android:background="@color/separator" />


    <LinearLayout
        android:id="@+id/profile_form_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_ci_image"
        android:gravity="center_horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/profile_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/profile_faculty_spinner"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:color="@color/colorPrimary"
            android:text="@string/faculty" />

        <Button
            android:id="@+id/profile_submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/change" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/profile_submit_progress"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:visibility="gone" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_alignTop="@+id/profile_form_layout"
        android:layout_toRightOf="@+id/profile_form_layout"
        android:layout_toEndOf="@+id/profile_form_layout" />

</RelativeLayout>